# ssh-client-dxt

./: .gitignore  CREDENTIAL_SECURITY.md  Cargo.toml  Makefile  QUICKSTART.md  README-RUST.md  README.md  SSH-CREDS-ENCRYPTED-README.md  SSH-CREDS-README.md  build.rs  manifest.json  package-lock.json  package.json  ssh-creds
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: release.yml  rust-ci.yml
scripts/: linux-wrapper.sh  macos-wrapper.sh  windows-wrapper.ps1
server/: index.js  test-simple.js  test.js
src/: command_validator.rs  config.rs  connection_pool.rs  credential_provider.rs  error.rs  external_creds.rs  lib.rs  main.rs  mcp_server.rs  session_manager.rs  smart_session.rs  ssh_client.rs  system_detector.rs
src/prompts/: mod.rs
src/tests/: credential_provider_test.rs  error_test.rs  mod.rs  session_manager_test.rs  tools_test.rs
src/tools/: mod.rs  ssh_tools.rs
tests/: credential_provider_test.rs  session_manager_test.rs  tools_test.rs
