[package]
name = "ssh-client-mcp"
version = "0.1.0"
edition = "2021"
authors = ["SSH Client MCP Contributors"]
description = "A secure SSH client implementation for the Model Context Protocol"
license = "MIT"

[dependencies]
# SSH functionality
ssh2 = "0.9"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# MCP protocol (JSON-RPC)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc-core = "18.0"
jsonrpc-stdio-server = "18.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Credential storage
keyring = "3.0"

# Security
argon2 = "0.5"
uuid = { version = "1.10", features = ["v4"] }
sha2 = "0.10"

# Configuration
config = "0.14"
directories = "5.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"
mockall = "0.13"